[tool.poetry]
name = "nui_federation_py_sdk"
version = "0.1.0"
description = "This Python SDK connects to the NUI Federation API for getting or creating, revoke, generating batch for NUI from the API."
authors = ["UGD <sd@digital.gov.mg>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
lint = "scripts:lint"
format = "scripts:format"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-mock = "^3.0"
pytest-cov = "^4.0"
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79

[tool.black]
line-length = 79
